Bug 265142 - Wrong encoding used when composing an e-mail using ksendemail
Summary: Wrong encoding used when composing an e-mail using ksendemail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 2.0.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-01 23:26 UTC by Aleix Pol
Modified: 2012-06-14 08:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2011-02-01 23:26:12 UTC
Version:           2.0 beta1 (using KDE 4.6.0) 
OS:                Linux

Whenever I run:
$ ksendemail --body "ààá"

I get the wrong characters

Reproducible: Always

Steps to Reproduce:
Run ksendemail with nonascii characters in the body argument

Actual Results:  
Wrong conversion

Expected Results:  
I'd expect to see the text I entered
Comment 1 Laurent Montel 2011-07-06 21:36:32 UTC
I can confirm this bug.
Will look at it.
Comment 2 Laurent Montel 2012-06-14 07:59:55 UTC
Git commit c34f433d14b949d398401d3e4d1681f6b4dc8cef by Montel Laurent.
Committed on 14/06/2012 at 09:59.
Pushed by mlaurent into branch 'master'.

Fix Bug 265142 - Wrong encoding used when composing an e-mail using

ksendemail

FIXED-IN: 4.8.5

M  +2    -2    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/c34f433d14b949d398401d3e4d1681f6b4dc8cef
Comment 3 Laurent Montel 2012-06-14 08:01:05 UTC
Git commit ed57431113f7658b03b59549283fde83c90cc603 by Montel Laurent.
Committed on 14/06/2012 at 09:59.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 265142 - Wrong encoding used when composing an e-mail using

ksendemail

FIXED-IN: 4.8.5
(cherry picked from commit c34f433d14b949d398401d3e4d1681f6b4dc8cef)

M  +2    -2    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/ed57431113f7658b03b59549283fde83c90cc603