Fix Bug 265142 - Wrong encoding used when composing an e-mail using

ksendemail

FIXED-IN: 4.8.5
BUG: 265142